# project-gobs

./: README.md  pyproject.toml  zshrc_snippet.sh
src/gobs/: __init__.py  cli.py
tests/: test_cli.py
